# smsync

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  hashsum.rs  main.rs  sync.rs  ui.rs
