[package]
name = "smsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
toml = "0"
chrono = "0"
fs_extra = "1"
egui = "*"
eframe = "*"
log = "*"
env_logger = "*"
thiserror = "*"
